# daskonverter

./: README.md  pyproject.toml
.github/workflows/: Python-package.yaml
daskonverter/: __init__.py  __main__.py  _bson.py  core.py
test/: test_core.py
test/resources/: mongodump.airpair.tags.csv
